--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 	line-height: 1.5;
-	font-size: 14px;
+	font-size: 16px;
 	background: paleturquoise;
 	padding: 140px 90px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#92d4d5+0,19b4c2+100 */
 	background: rgb(146,212,213); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(146,212,213,1) 0%, rgba(25,180,194,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  rgba(146,212,213,1) 0%,rgba(25,180,194,1) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -36,19 +35,12 @@ margin-bottom: 38px;
 	height: 200px;
 	border-radius: 50%;
 }
-/*.circle {
-	width: 200px;
-	height: 200px;
-	margin: 0 auto;
-	-webkit-clip-path: circle(50% at 50% 50%);
-	clip-path: circle(50% at 50% 50%);
-}*/
 
 /*FORM*/
 .container {
 	background: #fff;
 	padding: 45px 33px;
-	border: 1px solid #000;
+	border: 1px solid #AFEEEE;
 }
 .row {
 	border-bottom: 1.5px solid #000;
@@ -64,13 +56,13 @@ fieldset {
 	border: none;
 	text-align: center;
 }
-/*.rate {
-	text-align:center;
-}*/
+.dropdown {
+	text-align: left;
+}
+
 .control-group {
 	display:inline-block;
 	text-align:center;
-	/*margin-right: 20px;*/
 }
 .emoji-group {
 	padding: 20px;
@@ -86,14 +78,11 @@ svg {
 	height: 60px;
 }
 .selected-bg {
-	background: #bdbdbd;
-	border: 1px solid black;
+	background: lightgray;
+	border: 1px solid #AFEEEE;
 }
 .picked{
 /*	fill: #FFDE17;*/
-}
-.blue {
-	color:blue;
 }
 input[type="submit"] {
 	border:none;
@@ -102,4 +91,40 @@ input[type="submit"] {
 	background: black;
 	color: #FFF;
 	padding: 8px 20px;
+}
+textarea {
+	width: 100%;
+}
+#submission {
+	height: 100vh;
+}
+#submission h1 {
+	color: #FFF;
+}
+
+@media (max-width: 800px) {
+	body {
+		padding: 30px;
+	}
+	.welcome {
+		position: static;
+	}
+	svg {
+		width: 40px;
+		height: 40px;
+	}
+	.emoji-group {
+		padding: 8px;
+	}
+	label {
+		font-size: 12px;
+	}
+}
+@media (max-width: 500px) {
+	body {
+		font-size: 14px;
+	}
+.control-group {
+	padding-bottom: 20px;
+}
 }
